# facenet_ros

./: CMakeLists.txt  README.md  package.xml  requirement.txt
data/classifier/: classifier.pkl
launch/: bringup.launch
msg/: RecognizedResult.msg
src/: node.py  take_image.py  train.py
src/facenet/: facenet.py
src/facenet/align/: detect_face.py
