<?xml version="1.0"?>
<package format="2">
  <name>facenet_ros</name>
  <version>0.0.1</version>
  <description>The facenet_ros package</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <license>MIT</license>


  <url type="website">http://github.com/byeongkyu/facenet_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
